crates/meilisearch-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__bury.snap
---
source: crates/meilisearch-types/src/dynamic_search_rules.rs
expression: action
---
{
  "name": "bury",
  "args": {
    "score": 0.3
  }
}
