crates/meilisearch-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__hide.snap
---
source: crates/meilisearch-types/src/dynamic_search_rules.rs
expression: action
---
{
  "name": "hide",
  "args": {}
}
