crates/meilisearch-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__minimal_rule_round_trip.snap
---
source: crates/meilisearch-types/src/dynamic_search_rules.rs
expression: expected
---
{
  "uid": "simple-rule",
  "active": false,
  "conditions": [],
  "actions": [
    {
      "selector": {
        "id": "42"
      },
      "action": {
        "name": "pin",
        "args": {
          "position": 1
        }
      }
    }
  ]
}
