crates/meilisearch-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__time_both.snap
---
source: crates/meilisearch-types/src/dynamic_search_rules.rs
expression: condition
---
{
  "scope": "time",
  "settings": {
    "start": "2025-01-01T00:00:00Z",
    "end": "2025-12-31T23:59:59Z"
  }
}
